    Updated: API version to 1.0.4

SERVERS
    Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
    Added: Own i-MSCP ProFTPD sysvinit script to solve #IP-1402 - (Wheezy, Precise, Trusty)
    Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
    Fixed: Courier sysvinit must not be copied when selected PO server is Dovecot
    Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
    Fixed: ON|OFF string not recognized as boolean value in mysql conffile (MySQL)
    Fixed: Traffic accounting routines must not remove log files (ProFTPD/VsFTPd). Files are now truncated instead.
    Fixed: Useless reload of VsFTPd when adding/removing an FTP user (privileges are given by session)
    Fixed: VsFTPd doesn't reopen xferlog file automatically when the file has been removed, leading to traffic data loss
    Removed: /var/log/proftpd/ftp_traff.log custom log. Traffic data are now pulled from /var/log/proftpd/xferlog

YOUTRACK
    IP-1231 Default SPF DNS resource records should be overrideable
    IP-1402 ProFTPD doesn't restart properly - killed (signal 15) - Wheezy/Precise/Trusty
    IP-1509 Could not generate SSL certificate through the frontEnd - Invalide SSL certificate
    IP-1510 VsFTPd - Use of uninitialized value $tmpFile
    IP-1511 Use of uninitialized value $imscpOldConfig{"BASE_SERVER_VHOST"} on fresh install
    IP-1513 Autoreply - Do not autoreply to messages marked as SPAM
    IP-1514 Could not install i-MSCP on Ubuntu Trusty Thar in some contexts

------------------------------------------------------------------------------------------------------------------------
1.2.17
------------------------------------------------------------------------------------------------------------------------

2016-03-12: Laurent Declercq
    RELEASE i-MSCP 1.2.17

BACKEND