@@ -55,6 +55,7 @@ SERVERS
     Added: Own i-MSCP logrorate configuration file for ProFTPD (xferlog file don't need to be rotated)
     Added: Own i-MSCP ProFTPD sysvinit script to solve #IP-1402 - (Wheezy, Precise, Trusty)
     Fixed: Bad regexp in getTraffic() method leading to unmatching of traffic data (VsFTPd)
+    Fixed: Could not build local vsftpd package when gpg has been initialized; .changes file cannot be signed
     Fixed: Courier sysvinit must not be copied when selected PO server is Dovecot
     Fixed: Disabled mod_tls_memcache.c module to avoid weird notice on restart (ProFTPD)
     Fixed: ON|OFF string not recognized as boolean value in mysql conffile (MySQL)
